<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
  android:background="@drawable/fondo_campo_ferial"
  tools:context="cr.ac.tec.la_caja_magica.GameTutorial.TutorialSelection">

    <Button
      android:id="@+id/button_tuto_saltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
      android:layout_alignParentStart="true"
      android:layout_alignTop="@+id/button_tuto_plataformas"
      android:background="@drawable/boton_tutorial_saltar"
      android:onClick="selectJumpTutorial"
      android:text="@string/saltar"/>

    <Button
      android:id="@+id/button_tuto_plataformas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      android:layout_marginBottom="30dp"
        android:layout_above="@+id/button_tuto_valores"
        android:layout_alignParentEnd="false"
      android:layout_alignParentRight="true"
      android:background="@drawable/boton_tutorial_plataformas"
      android:onClick="selectPlatformTutorial"
      android:text="@string/platformas"/>

    <Button
      android:id="@+id/button_tuto_caer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/button_tuto_saltar"
        android:layout_alignStart="@+id/button_tuto_saltar"
      android:layout_centerVertical="true"
      android:background="@drawable/boton_tutorial_caer"
      android:onClick="selectFallingTutorial"
      android:text="@string/caer"/>

    <Button
      android:id="@+id/button_tuto_valores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_tuto_enemigos"
        android:layout_alignLeft="@+id/button_tuto_plataformas"
      android:layout_alignStart="@+id/button_tuto_plataformas"
      android:background="@drawable/boton_tutorial_valores"
      android:onClick="selectVirtuesTutorial"
      android:text="@string/valores"/>

    <Button
      android:id="@+id/button_tuto_enemigos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
        android:layout_below="@+id/button_tuto_caer"
        android:layout_centerHorizontal="true"
      android:background="@drawable/boton_tutorial_enemigos"
      android:onClick="selectEnemiesTutorial"
        android:text="@string/enemigos" />

    <TextView
      android:id="@+id/textViewTituloTutorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:text="@string/seleccione_tutorial"
      android:textAppearance="?android:attr/textAppearanceLarge"/>

</RelativeLayout>
