<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
  android:background="@drawable/fondo_domo"
  tools:context="cr.ac.tec.la_caja_magica.GameLogic.GameOver">

    <TextView
      android:id="@+id/textViewScores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      android:layout_marginTop="50dp"
        android:layout_below="@+id/textViewTituloGameOver"
        android:layout_centerHorizontal="true"
      android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
      android:id="@+id/buttonRetry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      android:layout_marginStart="50dp"
      android:layout_marginLeft="50dp"
      android:layout_alignParentLeft="true"
      android:layout_alignParentStart="true"
      android:layout_centerInParent="true"
        android:background="@drawable/button_large"
        android:onClick="restart"
      android:text="@string/reintentar"/>

    <Button
      android:id="@+id/buttonMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      android:layout_marginEnd="50dp"
      android:layout_marginRight="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
      android:background="@drawable/button_large"
      android:onClick="returnToMenu"
      android:text="@string/menu_principal"
            />

    <TextView
      android:id="@+id/textViewTituloGameOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
      android:text="@string/termino_juego"
      android:textAppearance="?android:attr/textAppearanceLarge"
            />

</RelativeLayout>
